--- a/Konakart/test-output/old/Default suite/classes.html
+++ b/Konakart/test-output/old/Default suite/classes.html
@@ -4,18 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.atmecs.konakart.script.Searches</td>
+<td>com.atmecs.konakart.script.ProductValidation</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>positiveSearches</td>
+<td>contentCorrectness</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>negativetiveSearches</td>
+<td>customerReview</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
