--- a/Konakart/test-output/old/Default suite/methods-alphabetical.html
+++ b/Konakart/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9fcf7f">  <td>19/10/07 08:15:55</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.browser()[pri:0, instance:com.atmecs.konakart.script.Searches@4278a03f]">&gt;&gt;browser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1773283386</td>   <td></td> </tr>
-<tr bgcolor="9fcf7f">  <td>19/10/07 08:16:13</td>   <td>17398</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.browserClose()[pri:0, instance:com.atmecs.konakart.script.Searches@4278a03f]">&lt;&lt;browserClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1773283386</td>   <td></td> </tr>
+<tr bgcolor="9fcf7f">  <td>19/10/09 20:13:11</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.browser()[pri:0, instance:com.atmecs.konakart.script.ProductValidation@d706f19]">&gt;&gt;browser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@479397964</td>   <td></td> </tr>
+<tr bgcolor="9fcf7f">  <td>19/10/09 20:13:36</td>   <td>24875</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.browserClose()[pri:0, instance:com.atmecs.konakart.script.ProductValidation@d706f19]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@479397964</td>   <td></td> </tr>
+<tr bgcolor="a778df">  <td>19/10/09 20:13:30</td>   <td>19068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductValidation.contentCorrectness(java.lang.String, java.lang.String)[pri:1, instance:com.atmecs.konakart.script.ProductValidation@d706f19]">contentCorrectness</td> 
+  <td>main@479397964</td>   <td></td> </tr>
+<tr bgcolor="a778df">  <td>19/10/09 20:13:35</td>   <td>24396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductValidation.contentCorrectness(java.lang.String, java.lang.String)[pri:1, instance:com.atmecs.konakart.script.ProductValidation@d706f19]">contentCorrectness</td> 
+  <td>main@479397964</td>   <td></td> </tr>
+<tr bgcolor="a778df">  <td>19/10/09 20:13:35</td>   <td>24580</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductValidation.contentCorrectness(java.lang.String, java.lang.String)[pri:1, instance:com.atmecs.konakart.script.ProductValidation@d706f19]">contentCorrectness</td> 
+  <td>main@479397964</td>   <td></td> </tr>
+<tr bgcolor="a778df">  <td>19/10/09 20:13:36</td>   <td>24868</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductValidation.customerReview()[pri:2, instance:com.atmecs.konakart.script.ProductValidation@d706f19]">customerReview</td> 
+  <td>main@479397964</td>   <td></td> </tr>
 </table>
